P1S callouts